Versión 20-07-23: Crucigrama y formulario avanzando con estilos

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -44,7 +44,7 @@
       <div class="content">
         <h3 id="moduloone">MÓDULO 1</h3>
         <p>Introducción al Cooperativismo</p>
-        <a [routerLink]="['/modulo1']">Ver Módulo</a>
+        <a routerLink="/cursos/modulo-uno">Ver Módulo</a>
       </div>
     </div>
 
