--- a/src/app/shared/components/formm1/formm1.component.html
+++ b/src/app/shared/components/formm1/formm1.component.html
@@ -5,200 +5,45 @@
       Educación Cooperativa y Financiera. </p>
 
 
-    <hr>
 
     <div class="form-group">
       <label class="subtitle">Nombre Completo *</label>
-      <input class="form-control" type="text" name="" id="">
+      <input class="form-control" type="text" name="" id="" required>
     </div>
 
     <div class="form-group">
       <label class="subtitle">Correo *</label>
-      <input class="form-control" type="email" name="" id="">
-    </div>
-
-    <hr>
-  </div>
-
-  <div class="content-form">
-
-    <div class="form-group">
-      <label class="subtitle">1. En la época prehispánica ¿Cómo se llamaban las primeras organizaciones que vivían
-        el cooperativismo?</label>
-
-      <div class="opciones">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="a" >
-          <label class="form-check-label" for="flexRadioDefault1">
-            a) Tierra de barrios
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="a" >
-          <label class="form-check-label" for="flexRadioDefault2">
-            b) Calpulli
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="a">
-          <label class="form-check-label" for="flexRadioDefault2">
-            c) Cooperativas
-          </label>
-        </div>
-      </div>
-
+      <input class="form-control" type="email" name="" id="" required>
     </div>
 
   </div>
 
-  <div class="content-form">
-
-
-    <div class="form-group">
-      <label class="subtitle">2. ¿Quiénes son algunos de los primeros representantes del Cooperativismo?</label>
-
-      <div class="opciones">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-          <label class="form-check-label" for="flexRadioDefault1">
-            a) Tomás Moro, Tommaso Campanella y Francis Bacon
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            b) Phillippe Buchez y Louis Blanc
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            c) Francis Bacon y Louis Blanc
-          </label>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="content-form">
+  <!-- Con el ngFor recorremos el arreglo 'preguntas' en una variable pregunta  -->
+  <div class="content-form p-0" *ngFor="let pregunta of preguntas; let i = index" [ngClass]="{'respCor': error[i] === 1, 'respInc': error[i] === 0 }">
 
     <div class="form-group">
-      <label class="subtitle">3. ¿En qué año nació la primera Cooperativa de Producción en México?</label>
-
+      <!-- imprimimos la pregunta numero 1 en el arreglo-->
+      <label class="subtitle-preg">{{ pregunta.pregunta }}</label>
       <div class="opciones">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-          <label class="form-check-label" for="flexRadioDefault1">
-            a) 1810
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            b) 1916
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            c) 1873
-          </label>
+        <!-- Recorremos las opciones del arreglo 'preguntas.opciones' y las asignamos en una variable llamada opcion  -->
+        <div *ngFor="let opcion of pregunta.opciones">
+          <div class="form-check">
+            <!-- name="pregunta{{ en el iterador del ngfor anterior }}" id="pregunta{{ iterador ngfor anteior }}-{{ string de la opcion }}" [(ngModel)]="llamamos a la propiedad respuestasSeleccionadas
+              en la pociion en la que se encuente" value se pone en llaves cuadradas ya que es una propiedad del elemento en el cual tomara el valor de la opcion correspondiente -->
+            <input class="form-check-input" type="radio" name="pregunta{{ i }}" id="pregunta{{ i }}-{{ opcion }}" [(ngModel)]="respuestasSeleccionadas[i]" [value]="opcion">
+            <!-- for="pregunta{{ iterador del ngfor anterior }}-{{ opcion correspondiente de este ngfor }}" -->
+            <label class="form-check-label" for="pregunta{{ i }}-{{ opcion }}">
+              {{ opcion }}
+            </label>
+          </div>
         </div>
       </div>
-
-    </div>
-  </div>
-  <div class="content-form">
-
-    <div class="form-group">
-      <label class="subtitle">4. En México, ¿Cuándo nacieron en su versión moderna, las Cajas?</label>
-
-      <div class="opciones">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-          <label class="form-check-label" for="flexRadioDefault1">
-            a) Año 2001
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            b) Año 1952
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            c) Año 1951
-          </label>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="content-form">
-
-    <div class="form-group">
-      <label class="subtitle">5. ¿Cuál es uno de los objetivos del Cooperativismo?</label>
-
-      <div class="opciones">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-          <label class="form-check-label" for="flexRadioDefault1">
-            a) Ofrecer alternativas financieras justas a quienes forman parte de su comunidad.
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            b) Ofrecer créditos.
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            c) Combatir la injusticia entre campesinos y obreros.
-          </label>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="content-form">
-
-    <div class="form-group">
-      <label class="subtitle">6. ¿Quién propone el modelo de la bandera del Cooperativismo?</label>
-
-      <div class="opciones">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-          <label class="form-check-label" for="flexRadioDefault1">
-            a) Guillermo Álvarez Macías
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            b) Charles Gide
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-          <label class="form-check-label" for="flexRadioDefault2">
-            c) Luis Blanc
-          </label>
-        </div>
-      </div>
-
     </div>
 
   </div>
 
 
   <div class="col-auto">
-    <button type="submit" class="btn btn-primary">Enviar</button>
+    <button (click)="verificarRespuestas()" type="submit" class="btn btn-primary">Enviar Respuestas</button>
   </div>
 </form>
