--- a/src/app/pages/page/perfil/perfil.component.html
+++ b/src/app/pages/page/perfil/perfil.component.html
@@ -1,10 +1,8 @@
 <div class="container">
 
-  <div class="row">
-    <div class="col-12">
-      <div class="card-perfil container-fluid">
-        <div class="card mb-3">
-          <div class="row g-0">
+      <div class="card-perfil">
+        <div class="card">
+          <div class="row">
             <div class="col-md-4">
               <img src="assets/perfil-usuario.jpg" class="img-fluid rounded-start" alt="...">
             </div>
@@ -16,14 +14,13 @@
                 <p class="card-text"><strong>Teléfono: </strong>33 23724897</p>
                 <p class="card-text"><strong>Domicilio: </strong>Malinche 117, Ciudad Aztlan, Tonala, Jalisco</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                <button type="button" class="btn btn-warning mt-4">Editar informacion</button>
+                <button type="button" class="btn btn-warning mt-4" routerLink="/inicio/edit">Editar informacion</button>
               </div>
             </div>
           </div>
         </div>
-      </div>
     </div>
-  </div>
+
 
   <div class="row modulos">
 
