--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,11 +2,11 @@
 
   <div class="container__header">
 
-    <a [routerLink]="['inicio']" class="brand" id="logo">
+    <a [routerLink]="['/inicio']" class="brand" id="logo">
       <img src="assets/logoE.png" height="80" alt="logo">
     </a>
 
-    <nav  class="menu" [ngClass]="{'active': isMenuActive}">
+    <nav  class="menu" (click)="toggleMenu()" [ngClass]="{'active': isMenuActive}">
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
       </div>
@@ -18,7 +18,7 @@
       </ul>
     </nav>
     <div class="btn">
-      <i class="fas fa-bars menu-btn"></i>
+      <i class="fas fa-bars menu-btn" (click)="toggleMenu()"></i>
     </div>
 
   </div>
