--- a/src/app/shared/pages/error404-page/error404-page.component.html
+++ b/src/app/shared/pages/error404-page/error404-page.component.html
@@ -1,1 +1,14 @@
-<p>error404-page works!</p>
+<div class="container d-flex flex-wrap justify-content-center">
+  <div class="row">
+    <div class="col-sm-6 d-flex flex-wrap justify-content-center align-items-center align-content-center">
+
+        <h3 class="fs-1">PAGINA NO ENCONTRADA</h3>
+        <p class="fs-3">No pudimos encontrar la pagina que buscabas</p>
+        <strong class="fs-3">Te recomendamos volver al menu de <a routerLink="/inicio">inicio</a></strong>
+
+    </div>
+    <div class="col-sm-6">
+      <img src="assets/404_img.svg" alt="">
+    </div>
+  </div>
+</div>
