--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -150,14 +150,12 @@ nav {
 }
 
 header .menu ul li a {
-  color: white;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 500;
   text-decoration: none;
   margin: 0 10px;
   padding: 7px 10px;
-  border: 5px;
   border-radius: 20px;
   transition: 0.3s;
   transition-property: color, background;
@@ -182,6 +180,12 @@ header.down {
 
 /*ADAPTACION A PANTALLAS*/
 @media (max-width: 1100px) {
+
+  header .menu ul li a{
+    padding: 10px;
+    margin: 0 0 15px;
+  }
+
   header, header.down {
     padding: 20px 10px;
   }
@@ -191,7 +195,6 @@ header.down {
     color: #1B5C35;
     font-size: 40px;
     cursor: pointer;
-    display: none;
   }
 
   header .menu {
@@ -204,6 +207,10 @@ header.down {
     padding: 10px 10px;
     transition: 0.5s;
     transition-property: right;
+  }
+
+  header .active{
+    right: 0;
   }
 
   header .menu ul {
