Se agrego la proteccion de rutas con los GUARDS

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -23,7 +23,7 @@
                 <h3>Iniciar Sesión</h3>
                 <input type="text" placeholder="Correo" name="emailUser" required>
                 <input type="password" placeholder="Contraseña" name="passwordUser" required>
-                <input type="submit" value="Iniciar" name="btningresar">
+                <input type="button" value="Iniciar" name="btningresar" (click)="onLogin()">
                 <a href="Recuperar/recuperar.php" class="forgot">¿Olvidaste la contraseña?</a>
             </form>
         </div>
