--- a/src/app/pages/page/main/main.component.html
+++ b/src/app/pages/page/main/main.component.html
@@ -12,9 +12,9 @@
       <h2>SAN PABLO</h2>
       <P>¡BIENVENIDO! <strong>
           <!-- {{member.nombre}} {{member.apellidos}} -->
-          {{usuarios[0].nombre}} {{usuarios[0].apellidos}}
+          {{user?.nombre}} {{user?.apellidos}}
         </strong></P>
-        <strong>No Socio: {{ usuarios[0].nSocio }} </strong>
+        <strong>No Socio: {{ user?.nSocio }} </strong>
       <!-- <input type="button" value="BOTON 1">
           <input type="button" value="BOTON 2" class="btn__dos"> -->
     </div>
