--- a/src/app/pages/page/perfil/perfil.component.html
+++ b/src/app/pages/page/perfil/perfil.component.html
@@ -8,12 +8,12 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Nestor Daniel Basave Davalos</h5>
-                <p class="card-text"><strong>Número de Socio: </strong>860</p>
-                <p class="card-text"><strong>Correo: </strong>ne.s.tor-10@hotmail.com</p>
-                <p class="card-text"><strong>Teléfono: </strong>33 23724897</p>
-                <p class="card-text"><strong>Domicilio: </strong>Malinche 117, Ciudad Aztlan, Tonala, Jalisco</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">{{name}}</h5>
+                <p class="card-text"><strong>Número de Socio: </strong>{{nSocio}}</p>
+                <p class="card-text"><strong>Correo: </strong>{{ correo }}</p>
+                <p class="card-text"><strong>Teléfono: </strong></p>
+                <p class="card-text"><strong>Domicilio: </strong></p>
+                <p class="card-text"><small class="text-muted"></small></p>
                 <button type="button" class="btn btn-warning mt-4" routerLink="/inicio/edit">Editar informacion</button>
               </div>
             </div>
