--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -192,7 +192,7 @@ header.down {
 
   header .btn {
     display: block;
-    color: #1B5C35;
+    color: #607d8b;
     font-size: 40px;
     cursor: pointer;
   }
