--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -18,26 +18,28 @@
 
         <!--Formulario Login-->
         <div class="form singinForm">
-            <form name="formulario" action="validarSesion.php" method="POST">
+            <form [formGroup]="myForm" (ngSubmit)="login()">
                 <img src="/assets/logoE.png" alt="logo" style="margin-bottom: 40px;">
                 <h3>Iniciar Sesión</h3>
-                <input type="text" placeholder="Correo" name="emailUser" required>
-                <input type="password" placeholder="Contraseña" name="passwordUser" required>
-                <input type="button" value="Iniciar" name="btningresar" (click)="onLogin()">
-                <a href="Recuperar/recuperar.php" class="forgot">¿Olvidaste la contraseña?</a>
+                <input type="text" placeholder="Correo" name="emailUser" formControlName="email">
+                <input type="password" placeholder="Contraseña" name="passwordUser" formControlName="password">
+                <input type="submit" value="Iniciar" [disabled]="myForm.invalid">
+
+                <!-- TODO: Tenemos que hacer esta parte de recuperar la contraseña -->
+                <a class="forgot">¿Olvidaste la contraseña?</a>
             </form>
         </div>
 
 
         <!--Formulario Registro-->
         <div class="form singupForm">
-            <form id="formulario" action="CreateUser.php" method="POST">
+            <form id="formulario" [formGroup]="myFormRegister" (ngSubmit)="register()" >
                 <h3>Resgistrarte</h3>
-                <input type="text" placeholder="No. Socio" name="socio" required>
-                <input type="text" placeholder="Nombre Completo" name="nombre_completo" required>
-                <input type="email" placeholder="Correo" name="correo" required>
-                <input type="password" placeholder="Contraseña" id="passwordUser" name="passwordUser" required>
-                <input type="submit" name="submit" value="Registrarme" id="btn-login">
+                <input type="text" placeholder="No. Socio" formControlName="nSocio" required>
+                <input type="text" placeholder="Nombre Completo" formControlName="name" required>
+                <input type="email" placeholder="Correo" formControlName="email" required>
+                <input type="password" placeholder="Contraseña" id="passwordUser" formControlName="password" required>
+                <input type="submit" value="Registrarme" id="btn-login" [disabled]="myFormRegister.invalid">
             </form>
         </div>
 
