--- a/src/app/pages/components/crucigrama/crucigrama.component.html
+++ b/src/app/pages/components/crucigrama/crucigrama.component.html
@@ -1,27 +1,87 @@
-<!-- Mensaje de error o de completado una vez precionando el boton verificar -->
-<div id="mensaje"></div>
-<!-- IFRAME DEL CRUCIGRAMA -->
-<div id="crucigrama" [ngStyle]="{'display': display}" class="col-md-8">
+<form [formGroup]="myForm" (ngSubmit)="onSave()" autocomplete="off" >
 
-  <table class="table">
+  <!-- TODO: REVISAR ESTOS COMENTARIOS -->
+  <!-- Mensaje de error o de completado una vez precionando el boton verificar -->
+  <!-- <div id="mensaje"></div> -->
+  <!-- IFRAME DEL CRUCIGRAMA -->
+  <div id="crucigrama" [ngStyle]="{'display': display}" >
 
-    <!-- recorremos las filas en su longitud: 17 -->
-    <tr *ngFor="let fila of filas">
-      <!-- recorremos las columnas en su longitud: 18 -->
-      <td *ngFor="let columna of columnas">
-        <!-- if -->
-        <ng-container *ngIf="enable.includes(fila + '_' + columna)">
-          <input class="casilla" type="text" maxlength="1" id="fila{{fila}}C{{columna}}"
-            [style.background-color]="'rgb(193, 255, 177)'">
+    <table class="table">
+
+      <!-- recorremos las filas en su longitud: 17 -->
+      <tr *ngFor="let fila of filas">
+        <!-- recorremos las columnas en su longitud: 18 -->
+        <td *ngFor="let columna of columnas">
+          <!-- if -->
+          <ng-container *ngIf="enable.includes(fila + '_' + columna)">
+            <input
+            [formControlName]="fila + '_' + columna"
+            class="casilla"
+            type="text"
+            maxlength="1"
+            id="fila{{fila}}C{{columna}}">
+          </ng-container>
+          <ng-container *ngIf="placeholders[fila + '_' + columna] as placeholder">
+          <input
+          class="casilla"
+          type="text" maxlength="1"
+          id="fila{{fila}}C{{columna}}"
+          [placeholder]="placeholder"
+          [formControlName]="fila + '_' + columna"
+          (blur)="checkInputValue($event)">
         </ng-container>
-        <!-- <ng-container *ngIf="placeholders[fila + '_' + columna] as placeholder">
-          <input class="casilla" type="text" maxlength="1" id="fila{{fila}}C{{columna}}" [placeholder]="placeholder"
-            [style.background-color]="'rgb(193, 255, 177)'">
-        </ng-container> -->
-      </td>
-    </tr>
+        </td>
+      </tr>
 
-  </table>
+    </table>
 
-</div>
-<input id="btnContinuar" [ngStyle]="{'display': display}" type="button" value="Continuar">
+  </div>
+  <input id="btnContinuar" [ngStyle]="{'display': display}" type="submit" value="Continuar">
+
+</form>
+
+  <!-- El modal se mostrará con el atributo 'showModal' como true -->
+  <div class="modal" tabindex="-1" role="dialog" style="background-color: #80808096;" [ngClass]="{'d-block': showModal}">
+    <div class="modal-dialog" role="document" style="top: 30%;">
+      <div class="modal-content border-2" style="border-color: var(--color-secundario);">
+        <div class="modal-header">
+          <h5 class="modal-title">Mensaje</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="cerrarPopup()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- Contenido del popup aquí -->
+          <p>Revisa tus respuestas para poder continuar...</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="cerrarPopup()">Cerrar</button>
+          <!-- Otras acciones del popup aquí -->
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- El modal se mostrará con el atributo 'showModal' como true -->
+  <div class="modal" tabindex="-1" role="dialog" style="background-color: #80808096;" [ngClass]="{'d-block': showModalfinished}">
+    <div class="modal-dialog" role="document" style="top: 30%;">
+      <div class="modal-content border-2" style="border-color: var(--color-secundario);">
+        <div class="modal-header">
+          <h5 class="modal-title">¡Felicidades!</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="cerrarPopup()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- Contenido del popup aquí -->
+          <p>Has contestado el crucigrama correctamente</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="cerrarPopup()">Cerrar</button>
+          <!-- Otras acciones del popup aquí -->
+        </div>
+      </div>
+    </div>
+  </div>
