--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -18,30 +18,30 @@
 
       <div class="box__footer col">
         <h2>ENLACES WEB</h2>
-        <a href="#">Aviso de Privacidad</a>
-        <a href="#">Condusef</a>
-        <a href="#">Unidad Especializada De Atención a Socios</a>
-        <a href="#">Despachos De Cobranza Externos</a>
-        <a href="#">Derechos Arco</a>
-        <a href="#">Costos y Comisiones</a>
+        <a href="https://www.libertadsanpablo.com/page61.html" target="_blank">Aviso de Privacidad</a>
+        <a href="https://www.gob.mx/condusef" target="_blank">Condusef</a>
+        <a href="https://www.libertadsanpablo.com/assets/files/unidad-especializada.pdf" target="_blank">Unidad Especializada De Atención a Socios</a>
+        <a href="https://www.libertadsanpablo.com/assets/files/DespachosDeCobranza.pdf" target="_blank">Despachos De Cobranza Externos</a>
+        <a href="https://www.libertadsanpablo.com/assets/files/derechos_arco.pdf" target="_blank">Derechos Arco</a>
+        <a href="https://www.libertadsanpablo.com/assets/files/CostosYComiciones_Agosto-2023.pdf" target="_blank">Costos y Comisiones</a>
       </div>
 
       <div class="box__footer col">
         <h2>ENLACES ÚTILES</h2>
-        <a href="#">Saldos en Línea</a>
-        <a href="#">Quiero Ser Socio</a>
-        <a href="#">Créditos</a>
-        <a href="#">Sucursales</a>
-        <a href="#">Historia</a>
+        <a href="https://www.libertadsanpablo.com/page48.html" target="_blank">Saldos en Línea</a>
+        <a href="https://www.libertadsanpablo.com/page53.html" target="_blank">Quiero Ser Socio</a>
+        <a href="https://www.libertadsanpablo.com/page24.html" target="_blank">Créditos</a>
+        <a href="https://www.libertadsanpablo.com/page1.html" target="_blank">Sucursales</a>
+        <a href="https://www.libertadsanpablo.com/page44.html" target="_blank">Historia</a>
       </div>
 
       <div class="box__footer col">
         <h2>S Í G U E N O S</h2>
         <p>REDES SOCIALES</p>
-        <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
-        <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
-        <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
-        <a href="#"><i class="fab fa-youtube-square"></i> Youtube</a>
+        <a href="https://www.facebook.com/CajaSanPabloOficial" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a>
+        <a href="https://twitter.com/cajasanpablo" target="_blank"><i class="fab fa-twitter-square"></i> Twitter</a>
+        <a href="https://www.instagram.com/cajapopularsanpablo/" target="_blank"><i class="fab fa-instagram-square"></i> Instagram</a>
+        <a href="" target="_blank"><i class="fab fa-youtube-square"></i> Youtube</a>
       </div>
 
     </div>
